--- a/package.json
+++ b/package.json
@@ -8,27 +8,121 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "~38.0.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.7.2",
+    "@react-navigation/stack": "^5.8.0",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
+    "base-64": "^0.1.0",
+    "browserify-zlib": "~0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
+    "ethers": "^5.0.7",
+    "events": "^1.0.0",
+    "expo": "^38.0.0",
+    "expo-random": "~8.2.1",
+    "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "~0.4.0",
     "expo-status-bar": "^1.0.0",
-    "expo-updates": "~0.2.10",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.1",
+    "expo-updates": "~0.2.8",
+    "https-browserify": "~0.0.0",
+    "node-libs-browser": "^2.2.1",
+    "path-browserify": "0.0.0",
+    "process": "^0.11.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "~0.2.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "0.62.2",
+    "react-native-crypto": "^2.2.0",
+    "react-native-dotenv": "^2.2.5",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2",
+    "readable-stream": "1.0.33",
+    "stream-browserify": "^1.0.0",
+    "timers-browserify": "^1.0.1",
+    "truffle": "^5.1.36",
+    "tty-browserify": "0.0.0",
+    "url": "^0.11.0",
+    "util": "~0.10.3",
+    "vm-browserify": "0.0.4",
+    "web3": "^1.2.11"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
+    "react-test-renderer": "~16.11.0",
+    "rn-nodeify": "^10.2.0"
   },
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
